# IN53xx_workflow_DLL_x64

./: .gitignore  API.md  CHANGELOG.md  CLI.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE_VENDOR.md  README.md  SECURITY.md  SUPPORT.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security.yml
.github/workflows/: build-and-release.yml  security-codeql.yml  security-gitleaks.yml
docs/: API.md  ARCHITECTURE.md  CLI.md  README.md  STRUCTURE.md  USER_GUIDE.md
docs/public-release/: go-no-go-report.md  legal-checklist.md
exemple/: lecteur_badge.wd  lecture_en_direct.wd
scripts/: test_device_x64.ps1  test_device_x86.ps1  test_stream_x64.ps1  test_stream_x86.ps1
src/uhf_wrapper/: CMakeLists.txt  README.md  UhfWrapper.def  UhfWrapper.x64.def  UhfWrapper.x86.def  uhf_cli.cpp  uhf_helper.cpp  uhf_wrapper.cpp  uhf_wrapper.h
src/uhf_wrapper/dotnet/: UhfWrapper.cs  UhfWrapperNet.csproj  UhfWrapperNet.x86.csproj
src/uhf_wrapper/tests/: uhf_wrapper_tests.cpp
